# hexlet_pytest

./: pyproject.toml  stack_test.py
tests/: test_example.py
