[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["Даниил Филимошин <filimoshin03@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
